--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
 <body>
   <div class="container" id="viral-content-generator">
     <header>
-      <h1>Complete Product Sales System</h1>
+      <h1>Complete Social Media Content Generator System</h1>
       <p class="subtitle">Social Media Viral Content Prompt Generator</p>
     </header>
 
